<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".RegistrationActivity">


    <EditText
        android:id="@+id/editText_RegistrationActivity_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edge_shape"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <EditText
        android:id="@+id/editText_RegistrationActivity_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edge_shape"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textAlignment="center"
        android:textColorHint="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <EditText
        android:id="@+id/editText_RegistrationActivity_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edge_shape"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textAlignment="center"
        android:textColorHint="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <EditText
        android:id="@+id/editText_RegistrationActivity_rePassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edge_shape"
        android:ems="10"
        android:hint="Re-Password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textAlignment="center"
        android:textColorHint="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <Button
        android:id="@+id/button_RegistrationActivity_create"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/edge_shape"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="19sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_RegistrationActivity_cancel"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9010417" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <Button
        android:id="@+id/button_RegistrationActivity_cancel"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edge_shape"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Cancel"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <ImageView
        android:id="@+id/imageView_RegistrationActivity_Email"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/editText_RegistrationActivity_email"
        app:layout_constraintStart_toStartOf="@+id/editText_RegistrationActivity_email"
        app:layout_constraintTop_toTopOf="@+id/editText_RegistrationActivity_email"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/imageView3_RegistrationActivity_Username"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@+id/editText_RegistrationActivity_username"
        app:layout_constraintStart_toStartOf="@+id/editText_RegistrationActivity_username"
        app:layout_constraintTop_toTopOf="@+id/editText_RegistrationActivity_username"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/imageView4_RegistrationActivity_Password"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_lock_outline"
        app:layout_constraintBottom_toBottomOf="@+id/editText_RegistrationActivity_password"
        app:layout_constraintStart_toStartOf="@+id/editText_RegistrationActivity_password"
        app:layout_constraintTop_toTopOf="@+id/editText_RegistrationActivity_password"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/imageView5_RegistrationActivity_RePassword"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_lock_outline"
        app:layout_constraintBottom_toBottomOf="@+id/editText_RegistrationActivity_rePassword"
        app:layout_constraintStart_toStartOf="@+id/editText_RegistrationActivity_rePassword"
        app:layout_constraintTop_toTopOf="@+id/editText_RegistrationActivity_rePassword"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textView_RegistrationActivity_CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="Create Account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/carrois_gothic"
        android:text="Stay connected. Meet new friends"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView_RegistrationActivity_CreateAccount" />

</android.support.constraint.ConstraintLayout>
