...
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/cabin"
        android:text="Available Lobby"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_HomeActivity_viewProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_HomeActivity_createLobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
